--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,7 @@ input[type="reset"]:before,
 				font-family: 'Libre Baskerville', cursive;
 				background: none;
 				color: #3a3939;
+
 				/*box-shadow: inset 0 0 1px 0 #dad9d9;*/
 				/*background-image: linear-gradient(45deg, rgba(13, 13, 13, 0), rgba(13, 13, 13, 0) 33.33%, #0d0d0d 33.33%, #0d0d0d 66.67%, rgba(13, 13, 13, 0) 66.67%, rgba(13, 13, 13, 0) 100%);*/
 				/*background-size: 10px 100%;*/
@@ -564,12 +565,14 @@ input[type="reset"]:before,
 					content: '';
 					display: block;
 					position: absolute;
+					border-image: url("images/border2.svg") 0 0 100% stretch repeat;
+					border-width: 0 0 35px;
+					border-style: solid;
 					left: 45%;
-					top: 3.2em;
-					background-image: linear-gradient(rgba(67,63,64,0.5), rgba(67,63,64,0.5) 33.33%, rgba(255, 255, 255, 0) 33.33%, rgba(255, 255, 255, 0) 100%);
-					height: 10px;
-					background-size: 0.5em 2px;
-					width: 2em;
+/*					top: 3.2em;
+*//*					height: 15px;
+*//*					background-size: 0.5em 2px;
+*/					width: 2em;
 				}
 
 				input[type="button"].style3:hover,
