--- a/css/style.css
+++ b/css/style.css
@@ -608,13 +608,13 @@ input[type="reset"]:before,
 			{
 				content: '';
 				display: block;
-				width: 99px;
+				width: 90px;
 				height: 114px;
 				position: absolute;
 				left: 50%;
-				top: -4.5em;
+				bottom: -4.5em;
 				margin-left: -45px;
-				margin-top: -33px;
+				margin-bottom: -33px;
 				background: url('images/arrow.svg') center no-repeat;
 			}
 		
@@ -886,7 +886,7 @@ input[type="reset"]:before,
 			{
 				content: '';
 				display: block;
-				width: 99px;
+				width: 90px;
 				height: 114px;
 				position: absolute;
 				left: 50%;
