--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,8 @@
 	
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
 		{
-			font-family: 'PT Sans', cursive;
-
+/*			font-family: 'PT Sans', cursive;
+*/			text-transform: uppercase;
 			color: inherit;
 			text-decoration: none;
 		}
@@ -611,7 +611,7 @@ input[type="reset"]:before,
 				top: -9em;
 				left: 50%;
 				height: 9em;
-				border-left: solid 1px rgba(67,63,64,0.5);
+				border-left: solid 1px rgba(67,63,64,1);
 			}
 		
 			.box:before
