--- a/css/style.css
+++ b/css/style.css
@@ -916,6 +916,7 @@ input[type="reset"]:before,
 		color: rgba(32, 36, 33, 0.99);
 		text-shadow: 0 0 0.5px rgba(255,255,255,0.25);
 		text-align: center;
+		width: 100%;
 		background: url('images/diagonal.svg') center no-repeat;
 		padding: 5em 0 5em 0;
 		margin: 0;
