--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset 'UTF-8';
-@import url('http://fonts.googleapis.com/css?family=Pathway+Gothic+One:300,300italic,400,600|Niconne|PT+Sans');
+@import url('http://fonts.googleapis.com/css?family=Pathway+Gothic+One:300,300italic,400,600');
 @import url('font-awesome.min.css');
 
 /*
@@ -15,7 +15,7 @@
 	body
 	{
 		background-color:		#FFFFF8;
-		background-image:		*/url('images/diagonal.png'),*/			url('../images/bg-mirror.jpg');
+		background-image:		url('images/overlay.png'),			url('../images/bg-mirror.jpg');
 		background-repeat:		repeat,								no-repeat;
 		background-size:		auto,								cover;
 		background-position: 	top left,							center 0;
@@ -531,9 +531,12 @@ input[type="reset"]:before,
 			input[type="reset"].style2,
 			.button.style2
 			{
+				font-style: italic;
+				font-family: 'Pathway Gothic One', sans-serif;
+				background: none;
 				color: #3a3939;
-				background: #fff;
-				box-shadow: inset 0 0 0 1px #fff;
+				box-shadow: inset 0 0 1px 0 #dad9d9;
+				border: solid 1px ;
 			}
 
 				input[type="button"].style2:hover,
@@ -541,8 +544,8 @@ input[type="reset"]:before,
 				input[type="reset"].style2:hover,
 				.button.style2:hover
 				{
-					background: rgba(255,255,255,0.1);
-					color: #fff !important;
+					color: rgba(67,63,64,0.5);
+					box-shadow: inset 0 0 15px rgba(255,255,255,0.01);
 					text-shadow: 0 0 0.5px rgba(255,255,255,0.25) !important;
 				}
 				
@@ -556,34 +559,14 @@ input[type="reset"]:before,
 
 				background: none;
 				color: #3a3939;
+				border-radius: 3em;
 
 				box-shadow: inset 0 0 1px 0 #dad9d9;
 				border: solid 1px ;
 				/*border-bottom-image: url("images/border.svg") 0 0 100% stretch repeat;*/
 				/*border-image: linear-gradient(45deg, rgba(13, 13, 13, 0), rgba(13, 13, 13, 0) 33.33%, #0d0d0d 33.33%, #0d0d0d 66.67%, rgba(13, 13, 13, 0) 66.67%, rgba(13, 13, 13, 0) 100%);*/
 				/*background-size: 10px 100%;*/
-			}
-
-				input[type="button"].style3:after,
-				input[type="submit"].style3:after,
-				input[type="reset"].style3:after,
-				.button.style3:after
-				{
-				/*	content: '';
-					display: block;
-					position: absolute;
-					border-image: url("images/border2.svg") 0 0 100% stretch repeat;
-					border-width: 0 0 25px 25px;
-					border-style: solid;
-					left: 50%;
-					top: 3.2em;
-					height: 15px;
-					background-size: 0.5em 2px;
-					width: 2em;*/
-				}
-
-					
-				
+			}				
 
 				input[type="button"].style3:hover,
 				input[type="submit"].style3:hover,
@@ -592,6 +575,7 @@ input[type="reset"]:before,
 				{
 					color: rgba(67,63,64,0.5);
 					box-shadow: inset 0 0 15px rgba(255,255,255,0.01);
+					text-shadow: 0 0 0.5px rgba(255,255,255,0.25) !important;
 				}
 
 	 /*Box*/ 
@@ -618,14 +602,14 @@ input[type="reset"]:before,
 			{
 				content: '';
 				display: block;
-				width: 90px;
-				height: 127px;
+				width: 40px;
+				height: 144px;
 				position: absolute;
 				left: 50%;
-				top: 100%;
-				margin-left: -45px;
+				top: -9em;
+				margin-left: -20px;
 				margin-bottom: -33px;
-				background: url('images/arrow.svg') center no-repeat;
+				background: url('images/arrow.svg') no-repeat;
 			}
 		
 			.box :last-child
@@ -715,7 +699,6 @@ input[type="reset"]:before,
 				.box.style2 header
 				{
 					display: inline-block;
-					background: #fff;
 					padding: 2em 3em 2em 3em;
 					margin: 0;
 				}
@@ -780,9 +763,9 @@ input[type="reset"]:before,
 					text-align: center;
 				}
 
-/********************************************************************************
+/*******************************************************************************
 /* Icons                                                                         
-/********************************************************************************
+/*******************************************************************************/
 
 	.icon {
 		text-decoration: none;
@@ -804,7 +787,7 @@ input[type="reset"]:before,
 			display: none;
 		}
 
-/*********************************************************************************/
+/********************************************************************************
 /* Header                                                                        */
 /*********************************************************************************/
 
@@ -826,7 +809,8 @@ input[type="reset"]:before,
 		}
 		
 			#header header h1
-			{
+			{				padding: 10px;
+				text-shadow: 0 0 0.5px rgba(67,63,64,0.1875);
 				font-weight: 600;
 				font-size: 2em;
 				letter-spacing: 10px;
@@ -840,9 +824,9 @@ input[type="reset"]:before,
 
 
 				/*border-top: solid 1px rgba(255,255,255,0.5);*/
-				color: rgba(36,34,37,0.75);
-				text-shadow: 0 0 0.5px rgba(67,63,64,0.1875);
-				font-size: 1em;
+				/*color: rgba(36,34,37,0.75);*/
+/*				text-shadow: 0 0 0.5px rgba(32,36,34,0.1875);
+*/				font-size: 1em;
 				text-transform: uppercase;
 				letter-spacing: 3px;
 				padding: 0;
@@ -854,11 +838,7 @@ input[type="reset"]:before,
 
 					content: '';
 					display: block;
-
-
-/*					width: 35%;*/
-					/*border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 20"><path fill="none" stroke="rgba(191, 191, 191, 0.9)" stroke-width="3" d="M0,13.5c3,0,3-12,6-12s3,12,6,12"/></svg>') 0 0 100% repeat;*/
-					border-image: url("images/border.svg") 0 0 100% stretch repeat;
+					border-image: url("images/border.svg") 100% 0 100% 0 repeat;
 					border-width: 0 0 25px;
 					border-style: solid;
 					position: relative;
@@ -872,6 +852,7 @@ input[type="reset"]:before,
 
 					margin: 4px 0 1em 0;
 				}
+
 
 		#header footer
 		{
@@ -896,12 +877,12 @@ input[type="reset"]:before,
 			{
 				content: '';
 				display: block;
-				width: 90px;
-				height: 127px;
+				width: 40px;
+				height: 144px;
 				position: absolute;
 				left: 50%;
 				top: 100%;
-				margin-left: -45px;
+				margin-left: -20px;
 				margin-bottom: -33px;
 				background: url('images/arrow.svg') center no-repeat;
 			}
@@ -917,7 +898,6 @@ input[type="reset"]:before,
 		text-shadow: 0 0 0.5px rgba(255,255,255,0.25);
 		text-align: center;
 		width: 100%;
-		/*background: url('images/diagonal.svg') center no-repeat;*/
 		padding: 5em 0 5em 0;
 		margin: 0;
 		border-image: url("images/diagonal.svg") 25% 0 25% 0 stretch repeat;
@@ -962,10 +942,6 @@ input[type="reset"]:before,
 			border-bottom-color: rgba(255,255,255,0.5);
 		}*/
 		
-			#banner a:hover
-			{
-				border-bottom-color: rgba(255,255,255,0);
-			}
 
 /*********************************************************************************/
 /* Footer                                                                        */
@@ -985,9 +961,9 @@ input[type="reset"]:before,
 			content: '';
 			display: block;
 			position: absolute;
-			top: -4.5em;
+			top: -9em;
 			left: 50%;
-			height: 4.5em;
+			height: 9em;
 			border-left: solid 1px rgba(67,63,64,0.5);
 		}
 
