--- a/css/style.css
+++ b/css/style.css
@@ -488,6 +488,7 @@
 		input[type="reset"],
 		.button
 		{
+			font-family: 'Pathway Gothic One', sans-serif;
 			z-index: 999;
 			-webkit-appearance: none;
 			position: relative;
@@ -532,8 +533,7 @@ input[type="reset"]:before,
 			input[type="reset"].style2,
 			.button.style2
 			{
-				font-style: italic;
-				font-family: 'Vollkorn', sans-serif;
+				/*font-style: italic;*/
 				background: none;
 				color: #3a3939;
 				box-shadow: inset 0 0 1px 0 #dad9d9;
@@ -555,9 +555,8 @@ input[type="reset"]:before,
 			input[type="reset"].style3,
 			.button.style3
 			{
-				font-style: italic;
-				font-family: 'Vollkorn', sans-serif;
-
+				/*font-style: italic;*/
+				/*font-family: 'Vollkorn', sans-serif;*/
 				background: none;
 				color: #3a3939;
 				border-radius: 3em;
