--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,7 @@
 		input[type="reset"],
 		.button
 		{
-			font-family: 'Pathway Gothic One', sans-serif;
+			font-family: 'Old Standard TT', sans-serif;
 			z-index: 999;
 			-webkit-appearance: none;
 			position: relative;
