--- a/css/style.css
+++ b/css/style.css
@@ -603,7 +603,7 @@ input[type="reset"]:before,
 				content: '';
 				display: block;
 				width: 40px;
-				height: 144px;
+				height: 166px;
 				position: absolute;
 				left: 50%;
 				top: -9em;
@@ -757,7 +757,8 @@ input[type="reset"]:before,
 
 			.box.style3
 			{
-				background: #fff;
+				border: solid 1px rgba(67,63,64,0.5);
+				background: #FFFFF8;
 				padding: 3em;
 			}
 
@@ -881,7 +882,7 @@ input[type="reset"]:before,
 				content: '';
 				display: block;
 				width: 40px;
-				height: 144px;
+				height: 166px;
 				position: absolute;
 				left: 50%;
 				top: 100%;
