--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @charset 'UTF-8';
 @import url('http://fonts.googleapis.com/css?family=Pathway+Gothic+One:300,300italic,400,600|Old+Standard+TT|Vollkorn');
 @import url('font-awesome.min.css');
+@font-face { 
+	font-family: Bebas Neue;
+	src: url('../fonts/BebasNeue.otf');
+}
 
 /*
 	Overflow by HTML5 UP
@@ -56,7 +60,7 @@
 
 	h1,h2,h3,h4,h5,h6
 	{
-		font-family: 'Pathway Gothic One', sans-serif;
+		font-family: 'Bebas Neue', sans-serif;
 		font-weight: 400;
 		text-transform: uppercase;
 		line-height: 1.75em;
@@ -757,8 +761,8 @@ input[type="reset"]:before,
 
 			.box.style3
 			{
-				border: solid 1px rgba(67,63,64,0.5);
-				background: #FFFFF8;
+				/*border: solid 1px rgba(67,63,64,0.5);*/
+				background: url('images/overlay.png'),			url('../images/bg-mirror.jpg');
 				padding: 3em;
 			}
 
@@ -814,8 +818,8 @@ input[type="reset"]:before,
 
 			#header header h1
 			{				padding: 10px;
-				text-shadow: 0 0 0.5px rgba(67,63,64,0.1875);
-				font-weight: 600;
+				/*text-shadow: 0 0 0.5px rgba(67,63,64,0.1875);*/
+				/*font-weight: 600;*/
 				font-size: 2em;
 				letter-spacing: 10px;
 			}
