--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -119,7 +119,7 @@
 				margin-left: -29.5px;
 				margin-bottom: -33px;
 				background: url('images/arrow-small
-					.svg') no-repeat;
+					.svg') center no-repeat;
 			}
 			#header footer:before
 			{
