--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ input[type="reset"].style2:after,
 	position: absolute;
 	top: 100%;
 	left: 50%;
-	height: 50em;
+	height: 11em;
 	border-left: solid 1px rgba(67,63,64,0.5);
 	
 }
@@ -871,13 +871,20 @@ margin-top: 0.35em;
 #header header p:before
 {
 
-	content: '';
+	/*content: '';
 	display: block;
 	border-image: url("images/border.svg") 100% 0 100% 0 repeat;
 	border-width: 0 0 45px;
 	border-style: solid;
 	position: relative;
-	margin: 4px 0 1em 0;
+	margin: 4px 0 1em 0;*/
+	content: '';
+	display: block;
+	/*border-image: url("images/border.svg") 100% 0 100% 0 repeat;*/
+	border-width: 0 0 4px;
+	border-style: double;
+	position: relative;
+	margin: 1em;
 }
 
 
