--- a/css/style.css
+++ b/css/style.css
@@ -794,7 +794,7 @@ input[type="reset"].style3:hover,
 				.box.style3
 				{
 					/*border: solid 1px rgba(67,63,64,0.5);*/
-					background: url('images/overlay.png'),			url('../images/bg-mirror.jpg');
+					/*background: url('images/overlay.png'),			url('../images/bg-mirror.jpg');*/
 					padding: 3em;
 				}
 
@@ -940,7 +940,7 @@ margin-top: 0.35em;
 	left: 50%;
 	top: 175%;
 	margin-left: -29.5px;
-	margin-bottom: -33px;
+	margin-bottom: -333px;
 	background: url('images/arrow-small-header.svg') center no-repeat;
 	z-index: 999;
 }
