--- a/css/style-narrow.css
+++ b/css/style-narrow.css
@@ -10,8 +10,8 @@
 
 	body
 	{
-		background-color:		#203936;
-		background-image:		/*url('images/overlay.png'),*/			url('../images/bg-alt.jpg');
+		background-color:		#FFFFF8;
+		background-image:		url('images/overlay.png'),			url('../images/bg-mirror.svg') center no-repeat;
 		background-repeat:		repeat,								no-repeat;
 		background-size:		auto,								100% auto;
 		background-position:	top left,							top center;
